--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>VAULT</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <meta name="theme-color" content="#0b0e14">
-  <link rel="manifest" href="assets/manifest.webmanifest">
-  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
-  <link rel="stylesheet" href="assets/styles.css">
+<link rel="manifest" href="/assets/manifest.webmanifest">
+<link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+<link rel="stylesheet" href="/assets/styles.css">
+<script type="module" src="/js/app.js"></script>
+
 
   <!-- Error overlay: shows JS errors on screen -->
   <script>
